# sntrup761x25519sha512_KEM-chacha20poly1305_AEAD

./: .gitignore  Cargo.toml  README.md  dev_utils.sh  do  mate.md
crypto/post_quantum/sntrup761x25519-sha512/: e2e.rs  main.rs
crypto/post_quantum/sntrup761x25519-sha512/latex_math_expl/: math_shortless.tex
src/: main.rs
src/client/: args.rs  mod.rs
src/compilation/: dev_compile_args.rs  e2e_registry.rs  mod.rs
src/crypto/: mod.rs
src/crypto/post_quantum/: mod.rs
src/crypto/post_quantum/chacha20poly1305/: mod.rs
src/crypto/post_quantum/sntrup761x25519-sha512/: tests.rs
src/crypto/post_quantum/sntrup761x25519-sha512/latex_math_expl/: math_short.tex
src/crypto/post_quantum/sntrup761x25519_sha512/: e2e.rs  mod.rs  tests.rs
src/crypto/post_quantum/sntrup761x25519_sha512/latex_math_expl/: math.tex
src/server/: mod.rs  traffic.rs
src/tests/: mating.rs  mod.rs
src/traffic/: mess_test_without_auth.rs  mod.rs
src/utils/: macros.rs
