[package]
name = "betterSSH"
version = "0.1.0"
edition = "2024"

[features]
default = []
e2e-tests = []

[dependencies]
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
pqcrypto-traits = "0.3"
pqcrypto-ntruprime = "0.1"
rand = "0.8"
tokio = { version = "1.50", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["full"] }

